--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -9,6 +9,9 @@ body {
 .login-page {
     display: flex;
     flex-direction: column;
+    height: calc(100vh - 400px);
+    /* 400 is the header height + footer height */
+    justify-content: center;
     align-items: center;
     background-color: #cfcfcf;
     padding: 4rem;
@@ -40,6 +43,10 @@ body {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+}
+
+.input-submit:hover {
+    background-color: #449c47;
 }
 
 .signup-link {
