Copied login page and converted it into the signup page. Also fixed the password not being type="password"

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,8 +5,8 @@
         <form class="login-form">
             <input type="text" name="username" placeholder="username" class="input-field" required>
             <input type="password" name="password" placeholder="password" class="input-field" required>
-            <input type="submit" value="Login" class="input-submit">
-            <h4>Don't have an account? <a href="/signup" class="signup-link">Signup</a></h4>
+            <input type="submit" value="Signup" class="input-submit">
+            <h4>Already have an account? <a href="/login" class="signup-link">Login</a></h4>
         </form>
     </div>
 {% endblock %}
