Changed username to email in login and signup and added fname and lname to signup

--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="login-page">
         <form class="login-form">
-            <input type="text" name="username" placeholder="username" class="input-field" required>
+            <input type="text" name="email" placeholder="email" class="input-field" required>
             <input type="password" name="password" placeholder="password" class="input-field" required>
             <input type="submit" value="Login" class="input-submit">
             <h4>Don't have an account? <a href="/signup" class="signup-link">Signup</a></h4>
