--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,7 +3,13 @@
 {% block body %}
     <div class="login-page">
         <form class="login-form">
-            <input type="text" name="username" placeholder="username" class="input-field" required>
+            <select id="type" name="type" class="input-field">
+                <option value="student">Student</option>
+                <option value="teacher">Teacher</option>
+            </select>
+            <input type="text" name="email" placeholder="email" class="input-field" required>
+            <input type="fname" name="fname" placeholder="first name" class="input-field" required>
+            <input type="lname" name="lname" placeholder="last name" class="input-field" required>
             <input type="password" name="password" placeholder="password" class="input-field" required>
             <input type="submit" value="Signup" class="input-submit">
             <h4>Already have an account? <a href="/login" class="signup-link">Login</a></h4>
