--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,7 +2,7 @@
 {% extends 'base.html' %}
 {% block body %}
     <div class="login-page">
-        <form class="login-form">
+        <form class="login-form" method="POST">
             <select id="type" name="type" class="input-field">
                 <option value="student">Student</option>
                 <option value="teacher">Teacher</option>
