--- a/static/styles/accounts.css
+++ b/static/styles/accounts.css
@@ -1,8 +1,13 @@
 .accountsContainer{
-    height: 400px;
-    max-width: 900px;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 10px;
+    align-items: center;
+    margin: 0 auto;
+    /* min-height: 400px; */
+    max-width: 1000px;
     padding: 15px;
-    background-color: #c2bebe;
+    background-color: #507b48;
 }
 .accountItem{
     margin: 10px;
