--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,14 @@
 {% extends 'base.html' %}
 {% block body %}
     <div class="login-page">
-        <form class="login-form">
+        <form class="login-form" method="POST">
+            {% if error %}
+                <h4 class="login-error">{{error}}</h4>
+            {% endif %}
+            <select id="type" name="type" class="input-field">
+                <option value="students">Student</option>
+                <option value="teachers">Teacher</option>
+            </select>
             <input type="text" name="email" placeholder="email" class="input-field" required>
             <input type="password" name="password" placeholder="password" class="input-field" required>
             <input type="submit" value="Login" class="input-submit">
