--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -3,6 +3,19 @@ body {
     box-sizing: border-box;
 }
 
+/* Home Start */
+
+.home-login {
+    font-weight: 500;
+    background-color: #4CAF50;
+    border-radius: 5px;
+    padding: 1rem 2rem;
+    text-decoration: none;
+    color: black;
+}
+
+/* Home End */
+
 
 /* Login / Signup Page Start*/
 
