Header img now links to home and links work (take test and create test might have incorrect urls)

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,13 +10,15 @@
     <header>
         <div class="headerContainer">
             <div class="navMenu">
-                <img src="https://img.freepik.com/premium-vector/school-building-city-red-home-house-with-bushes-education-learning-training-knowledge-information-cartoon-flat-vector-illustration-isolated-white-background_1002658-2326.jpg" alt="school">
+                <a href="/">
+                    <img src="https://img.freepik.com/premium-vector/school-building-city-red-home-house-with-bushes-education-learning-training-knowledge-information-cartoon-flat-vector-illustration-isolated-white-background_1002658-2326.jpg" alt="school">
+                </a>
                 <ul class="nav">
-                    <li class="navItem"><a href="">Sign up</a></li>
-                    <li class="navItem"><a href="">Login</a></li>
-                    <li class="navItem"><a href="">View accounts</a></li>
-                    <li class="navItem"><a href="">Take a test</a></li>
-                    <li class="navItem"><a href="">Create a test</a></li>
+                    <li class="navItem"><a href="/signup">Sign up</a></li>
+                    <li class="navItem"><a href="/login">Login</a></li>
+                    <li class="navItem"><a href="/accounts">View accounts</a></li>
+                    <li class="navItem"><a href="/test">Take a test</a></li>
+                    <li class="navItem"><a href="/create">Create a test</a></li>
                 </ul>
             </div>
         </div>
