"+create.html, +create.js, +create.css"

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,9 +14,9 @@
                 <ul class="nav">
                     <li class="navItem"><a href="">Sign up</a></li>
                     <li class="navItem"><a href="">Login</a></li>
-                    <li class="navItem"><a href="">View accounts</a></li>
+                    <li class="navItem"><a href="/accounts.html">View accounts</a></li>
                     <li class="navItem"><a href="">Take a test</a></li>
-                    <li class="navItem"><a href="">Create a test</a></li>
+                    <li class="navItem"><a href="/create.html">Create a test</a></li>
                 </ul>
             </div>
         </div>
