--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="../static/styles/styles.css">
 {% extends 'base.html' %}
 {% block body %}
-<div class="login-page">
+<div class="page">
     <h1>
         <a class="home-login" href="/login">Login</a>
         <a class="home-login" href="/signup">Signup</a>
