--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="../static/styles/styles.css">
 {% extends 'base.html' %}
 {% block body %}
-    <div class="login-page">
+    <div class="page">
         <form class="login-form" method="POST">
             {% if error %}
                 <h4 class="login-error">{{error}}</h4>
