--- a/templates/test.html
+++ b/templates/test.html
@@ -8,7 +8,7 @@
         <ul class="accountItem">
                 <li>ID: {{tests[i][0]}}</li>
                 <li>Name: {{tests[i][2]}}</li>
-                <li>Teacher Name: {{teachers[i][0]}}</li>
+                <li>Teacher Name: {{teachers[i][0][0]}}</li>
         </ul>
         {% endfor %}
     </div>
