--- a/templates/base.html
+++ b/templates/base.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/styles/base.css">
-    <title>Title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+    <title>GradeHub</title>
+    <link rel="icon" type="image/png" href="../static/images/logo.png">
 </head>
 <body>
     <header>
         <div class="headerContainer">
             <div class="navMenu">
-                <a href="/">
-                    <img src="https://img.freepik.com/premium-vector/school-building-city-red-home-house-with-bushes-education-learning-training-knowledge-information-cartoon-flat-vector-illustration-isolated-white-background_1002658-2326.jpg" alt="school">
-                </a>
+                <div class="headerLogo">
+                    <h2 class="brand">GradeHub</h2>
+                    <a href="/">
+                        <img src="../static/images/logo.png">
+                    </a>
+                </div>
+
                 <ul class="nav">
                     <li class="navItem"><a href="/signup">Sign up</a></li>
                     <li class="navItem"><a href="/login">Login</a></li>
