--- a/templates/signup.html
+++ b/templates/signup.html
@@ -13,10 +13,10 @@
                 <option value="students">Student</option>
                 <option value="teachers">Teacher</option>
             </select>
-            <input type="text" name="email" placeholder="email" class="input-field" required>
-            <input type="fname" name="fname" placeholder="first name" class="input-field" required>
-            <input type="lname" name="lname" placeholder="last name" class="input-field" required>
-            <input type="password" name="password" placeholder="password" class="input-field" required>
+            <input type="text" name="email" placeholder="Email" class="input-field" required>
+            <input type="fname" name="fname" placeholder="First name" class="input-field" required>
+            <input type="lname" name="lname" placeholder="Last name" class="input-field" required>
+            <input type="password" name="password" placeholder="Password" class="input-field" required>
             <input type="submit" value="Signup" class="input-submit">
             <h4>Already have an account? <a href="/login" class="signup-link">Login</a></h4>
         </form>
