--- a/templates/login.html
+++ b/templates/login.html
@@ -13,8 +13,8 @@
                 <option value="students">Student</option>
                 <option value="teachers">Teacher</option>
             </select>
-            <input type="text" name="email" placeholder="email" class="input-field" required>
-            <input type="password" name="password" placeholder="password" class="input-field" required>
+            <input type="text" name="email" placeholder="Email" class="input-field" required>
+            <input type="password" name="password" placeholder="Password" class="input-field" required>
             <input type="submit" value="Login" class="input-submit">
             <h4>Don't have an account? <a href="/signup" class="signup-link">Signup</a></h4>
         </form>
