changes to css in accounts and create, changes to html in accounts

--- a/templates/accounts.html
+++ b/templates/accounts.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="../static/styles/accounts.css">
 {%extends 'base.html'%}
 {% block body %}
+<h2 class="title">Accounts</h2>
 <div class="accountsContainer">
     {% for teacher in teachers %}
     <ul class="accountItem">
