--- a/static/styles/accounts.css
+++ b/static/styles/accounts.css
@@ -1,13 +1,28 @@
+@import url(../styles/base.css);
+
+body{
+    background-color: var(--color-3);
+}
+.title{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px auto;
+    color: var(--color-2);
+    font-family: 'Barlow Semi Condensed';
+    font-size: 30px;
+    text-transform: uppercase;
+}
 .accountsContainer{
     display: grid;
     grid-template-columns: auto auto auto;
     gap: 10px;
     align-items: center;
     margin: 0 auto;
-    /* min-height: 400px; */
     max-width: 1000px;
     padding: 15px;
-    background-color: #507b48;
+    background-color: var(--color-4);
+    font-family: 'Barlow Semi Condensed';
 }
 .accountItem{
     margin: 10px;
