--- a/templates/create.html
+++ b/templates/create.html
@@ -28,6 +28,7 @@
 </script>
 {%extends 'base.html'%}
 {% block body %}
+    <h2 class="title">Create a test</h2>
     <div class="testFormContainer">
         <div class="testForm">
             <form action="{{ url_for('create') }}" method = 'POST' class="form">
