--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -69,30 +69,54 @@
 
 
 footer{
-    height: 150px;
     background-color: var(--color-1); 
     font-family: 'Barlow Semi Condensed';
 }
+
 .footerNavMenu{
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    margin: auto;
     width: 100%;
+    height: 100px;
 }
-.footerSection{
-    width: 17%;
-    height: 150px;
-    background-color: var(--color-2);
-}
+
 .footerItemsWrapper{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 83%;
+    margin: auto;
+    width: 95%;
 }
+
 .footerNav{
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    color: var(--color-3);
+}
+
+.footerNavItem{
+    margin: auto 20px auto auto;
+}
+
+/* .footerSectionLegal{
+    margin-right: 100px;
+} */
+
+.socialNav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     list-style: none;
 }
-.footerSectionLegal{
-    margin-right: 100px;
+
+.socialNavItem{
+    margin: 10px;
+}
+
+.socialNavItem > i{
+    height: 20px;
+    color: var(--color-3);
 }
