--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/styles/base.css">
+    <script src="https://kit.fontawesome.com/318fe15147.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
@@ -37,20 +38,23 @@
     <footer>
         <div class="footerContainer">
             <div class="footerNavMenu">
-                <div class="footerSection">
-
-                </div>
                 <div class="footerItemsWrapper">
                     <ul class="footerNav">
                         <li class="footerNavItem">Terms of Use</li>
                         <li class="footerNavItem">Privacy Policy</li>
-                        <li class="footerNavItem"></li>
-                        <li class="footerNavItem"></li>
+                        <li class="footerNavItem">Manage cookies</li>
+                        <li class="footerNavItem">Contact</li>
                         <li class="footerNavItem"></li>
                     </ul>
                     <div class="footerSectionLegal">
                         <p>&copy; 2025 Example Inc. All rights reserved.</p>
                     </div>
+                    <ul class="socialNav">
+                        <li class="socialNavItem"><i class="fa-brands fa-facebook fa-lg"></i></li>
+                        <li class="socialNavItem"><i class="fa-brands fa-instagram fa-lg"></i></li>
+                        <li class="socialNavItem"><i class="fa-brands fa-x-twitter fa-lg"></i></li>
+                        <li class="socialNavItem"><i class="fa-brands fa-google fa-lg"></i></li>
+                    </ul>
                 </div>
             </div>
         </div>
