--- a/static/styles/create.css
+++ b/static/styles/create.css
@@ -1,5 +1,32 @@
 @import url(../styles/base.css);
 
+/* Order properties:
++-------------------+
+|      display      |
+|     properties    |
+|                   |
+|      margin       |
+|                   |
+|  +---border----+  |
+|  |             |  |
+|  |  background |  |
+|  |    color    |  |
+|  |             |  |
+|  |   padding   |  |
+|  |             |  |
+|  |  +-------+  |  |
+|  |  | height|  |  |
+|  |  | width |  |  |
+|  |  | list  |  |  |
+|  |  | text  |  |  |
+|  |  | color |  |  |
+|  |  | font  |  |  |
+|  |  | cursor|  |  |
+|  |  +-------+  |  |
+|  +-------------+  |
++-------------------+ 
+*/
+
 body{
     background-color: (--color-3);
 }
@@ -9,31 +36,32 @@ body{
     flex-direction: column;
     align-items: center;
     margin: 20px auto;
-    color: var(--color-2);
-    font-family: 'Barlow Semi Condensed';
-    font-size: 30px;
     text-transform: uppercase;
+    color: var(--color-2);
+    font-family: var(--font-main);
+    font-size: 30px;
 }
 
 .testFormContainer{
     display: flex;
     align-items: center;
     margin: 0 auto;
-    min-height: calc(100vh - 250px);
-    max-width: 1000px;
-    padding: 15px;
     background-color: var(--color-4);
+    padding: 15px;
+    min-height: calc(100vh - 200px);
+    max-width: 1000px;
 }
+
 .testForm{
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
+    background-color: #fff;
+    padding: 10px;
     min-height: 200px;
     width: 100%;
-    padding: 10px;
-    background-color: #fff;
-    font-family: 'Barlow Semi Condensed';
+    font-family: var(--font-main);
 }
 
 .errorMessage{
@@ -50,21 +78,20 @@ form{
 
 input,
 select{
-    font-family: 'Barlow Semi Condensed';
+    font-family: var(--font-main);
 }
 
 button,
 .submit-btn{
-    font-size: 1.2rem;
-    width: 60%;
-    background-color: var(--color-1);
-    color: white;
-    padding: 12px 20px;
-    margin: 8px 0;
+    margin: 8px 0;    
     border: none;
     border-radius: 4px;
+    width: 60%;
+    background-color: var(--color-1);
+    padding: 12px 20px;
+    color: var(--color-3);
+    font-family: var(--font-main);
     cursor: pointer;
-    font-family: 'Barlow Semi Condensed';
 }
 
 .startQuestions{
