style.css changes to buttons, fixed some issues in main.py with signup, added password hashing

--- a/templates/test.html
+++ b/templates/test.html
@@ -10,7 +10,7 @@
                 <li>Test Name: {{tests[i][2]}}</li>
                 <li>Teacher Name: {{teachers[i][0][0]}}</li>
                 <li>Questions: {{tests[i][3]}}</li>
-                <li>
+                <li class="takeTestBtn">
                     <a class="btn" href="/test/{{tests[i][0]}}">Take test</a>
                 </li>
         </ul>
