css for /test page, added edit button and adjusted take test button

--- a/static/styles/accounts.css
+++ b/static/styles/accounts.css
@@ -3,6 +3,7 @@
 body{
     background-color: var(--color-3);
 }
+
 .title{
     display: flex;
     flex-direction: column;
@@ -13,6 +14,7 @@ body{
     font-size: 30px;
     text-transform: uppercase;
 }
+
 .accountsContainer{
     display: grid;
     grid-template-columns: auto auto auto;
@@ -24,6 +26,7 @@ body{
     padding: 15px;
     font-family: var(--font-main);
 }
+
 .accountItem{
     margin: 10px;
     height: 150px;
@@ -31,4 +34,27 @@ body{
     background-color: #fff;
     padding: 10px;
     list-style: none;
+}
+
+
+/* ------------------------------------ */
+/* ---- TEST ITEMS EDIT-BTN STYLES ---- */
+/* ------------------------------------ */
+
+
+.edit-btn{
+    margin-top: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: var(--color-1);
+    height: 30px;
+    width: 30px;
+}
+
+.edit-btn:hover{
+    background-color: var(--color-2);
+}
+
+.fa-pen-to-square{
+    color: var(--color-3);
 }
