--- a/templates/base.html
+++ b/templates/base.html
@@ -38,8 +38,8 @@
                     <li class="navItem"><a href="/signup">Sign up</a></li>
                     <li class="navItem"><a href="/login">Login</a></li>
                     <li class="navItem"><a href="/accounts">View accounts</a></li>
-                    <li class="navItem"><a href="/test">Take a test</a></li>
-                    <li class="navItem"><a href="">View tests</a></li>
+                    <li class="navItem"><a href="/test">Tests</a></li>
+                    <li class="navItem"><a href="">Test attempts</a></li>
                     <li class="navItem"><a href="/create">Create a test</a></li>
                     <li class="navItem"><a href="#" onclick="openFlyout()"><i class="fa-regular fa-circle-user fa-lg"></i></a></li>
                 </ul>
