Logout button now works to log the user out

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
             <div class="flyout" id="flyoutMenu">
                 <a href="#" onclick="closeFlyout()" id="close">&times;</a>
                 <div class="signout">
-                    <button id="signout-btn">Sign out</button>
+                    <button id="signout-btn" onclick="window.location.href='/signout'">Sign out</button>
                 </div>
             </div>
         </div>
