--- a/templates/test.html
+++ b/templates/test.html
@@ -13,7 +13,7 @@
                 <a class="test-btn" href="/test/{{tests[i][0]}}">Take test</a>
             </li>
             <li class="edit-btn-container">
-                <a class="edit-btn" href="/test/edit/{{tests[i][0]}}"><i class="fa-solid fa-pen-to-square"></i></a>
+                <a class="edit-btn" href="/test/edit{{tests[i][0]}}"><i class="fa-solid fa-pen-to-square"></i></a>
             </li>
         </ul>
         {% endfor %}
