--- a/templates/test.html
+++ b/templates/test.html
@@ -3,17 +3,20 @@
 {% extends 'base.html' %}
 {% block body %}
 <div class="page">
+    {% if message %}
+    <h2 class="message">{{ message }}</h2>
+    {% endif %}
     <div class="accountsContainer">
         {% for i in range(tests|length) %}
         <ul class="accountItem">
-            <li>Test Name: {{tests[i][2]}}</li>
-            <li>Teacher Name: {{teachers[i][0][0]}}</li>
-            <li>Questions: {{tests[i][3]}}</li>
+            <li>Test Name: {{ tests[i][2] }}</li>
+            <li>Teacher Name: {{ teachers[i][0][0] }}</li>
+            <li>Questions: {{ tests[i][3] }}</li>
             <li class="takeTestBtn">
                 <a class="test-btn" href="/test/{{tests[i][0]}}">Take test</a>
             </li>
             <li class="edit-btn-container">
-                <a class="edit-btn" href="/test/edit{{tests[i][0]}}"><i class="fa-solid fa-pen-to-square"></i></a>
+                <a class="edit-btn" href="/edit/{{tests[i][0]}}"><i class="fa-solid fa-pen-to-square"></i></a>
             </li>
         </ul>
         {% endfor %}
