--- a/templates/test.html
+++ b/templates/test.html
@@ -1,11 +1,19 @@
 <link rel="stylesheet" href="../static/styles/styles.css">
 <link rel="stylesheet" href="../static/styles/accounts.css">
+<script>
+    function confirmDelete() {
+        return confirm("Are you sure you want to delete this test? This will also delete any related student attempts. This action cannot be undone.");
+    }
+</script>
 {% extends 'base.html' %}
 {% block body %}
 <div class="page">
     {% if message %}
     <h2 class="message">{{ message }}</h2>
     {% endif %}
+    {% if not tests or not teachers %}  
+    <h2 class="error-message">No tests available</h2>
+    {% else %}
     <div class="accountsContainer">
         {% for i in range(tests|length) %}
         <ul class="accountItem">
@@ -17,9 +25,13 @@
             </li>
             <li class="edit-btn-container">
                 <a class="edit-btn" href="/edit/{{tests[i][0]}}"><i class="fa-solid fa-pen-to-square"></i></a>
+                <form class="deleteForm" action="{{ url_for('delete', test_id=tests[i][0]) }}" method="POST" onsubmit="return confirmDelete()">
+                    <button class="delete-btn" type="submit"><i class="fa-solid fa-trash-can"></i></button>
+                </form>
             </li>
         </ul>
         {% endfor %}
     </div>
+    {% endif %}
 </div>
 {% endblock %}
