adjusted home html/css

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
             <div class="navMenu">
                 <div class="headerLogo">
                     <h2 class="brand">GradeHub</h2>
-                    <a href="#">
+                    <a href="/home">
                         <img src="../../static/images/logo.png">
                     </a>
                 </div>
