--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -30,8 +30,14 @@
 body {
     margin: 0;
     box-sizing: border-box;
+    background-color: var(--color-3);
     font-family: var(--font-main);
 }
+
+
+/* -------------------------- */
+/* ---- TEST PAGE STYLES ---- */
+/* -------------------------- */
 
 .test-btn {
     border-radius: 5px;
@@ -48,7 +54,7 @@ body {
     margin-top: 8px;
 }
 
-.page {
+.page{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -59,7 +65,74 @@ body {
     padding: 4rem;
 }
 
-/* Home Start */
+
+/* -------------------------- */
+/* ---- HOME PAGE STYLES ---- */
+/* -------------------------- */
+
+/* -- hero section styles -- */
+.hero{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 40px auto;
+    padding: 20px;
+    height: 250px;
+    max-width: 900px;
+}
+.hero > h1{
+    margin-top: 20px;
+    color: var(--color-1);
+    font-size: 40px;
+}
+.hero > p{
+    margin-top: 20px;
+    color: var(--color-1);
+    font-size: 20px;
+}
+.hero > a{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+    width: 130px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: var(--color-5);
+    font-size: 20px;
+}
+
+/* -- features section styles -- */
+
+.features{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px auto 100px;
+    border-radius: 25px;
+    background-color: var(--color-4);
+    padding-top: 15px;
+    height: 300px;
+    max-width: 800px;
+    box-shadow: 10px 7px 7px var(--color-2);
+}
+.features > h2{
+    color: var(--color-2);
+    font-size: 30px;
+}
+.feature-list{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: auto;
+}
+.feature{
+    margin: 40px;
+    color: var(--color-2);
+}
+.feature > h3{
+    font-size: 20px;
+}
 
 .home-login {
     border-radius: 5px;
@@ -70,14 +143,13 @@ body {
     font-weight: 500;
 }
 
-/* Home End */
 
-
-/* Login / Signup Page Start*/
+/* -------------------------------------- */
+/* ---- LOGIN / SIGNUP  PAGES STYLES ---- */
+/* -------------------------------------- */
 
 select, input, button{
     font-family: var(--font-main);
-    /* background-color: var(--color-3); */
 }
 
 .login-form {
