+testName to attempts table, both added to create table statement and commented out alter table statement, basic functionality for test attempts page

--- a/templates/take_test.html
+++ b/templates/take_test.html
@@ -7,7 +7,7 @@
         {% if error %}
             <h4 class="login-error">{{error}}</h4>
         {% endif %}
-        {% for i in range(questions|length - 1) %}
+        {% for i in range(questions|length) %}
             <label for="question_{{i+1}}">{{questions[i]}}</label>
             <input type="text" name="question_{{i+1}}" placeholder="Answer Here" class="input-field" max="255">
         {% endfor %}
